// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture > 2312.17141.html 1`] = `
{
  "byUnit": {
    "ack": 1,
    "authorinfo": 4,
    "bibblock": 99,
    "caption": 11,
    "footnote": 2,
    "p": 550,
    "personname": 2,
    "title": 159,
  },
  "cells": 0,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "S8.SS2.SSS0.Px7.p2.1",
    "S8.SS2.SSS0.Px7.p3.1",
    "S8.SS2.SSS0.Px7.p3.2",
  ],
  "numericCells": 0,
  "table": 0,
  "text": 828,
  "total": 828,
}
`;

exports[`fixture > 2312.17527.html 1`] = `
{
  "byUnit": {
    "authorinfo": 8,
    "bibblock": 42,
    "caption": 6,
    "footnote": 4,
    "p": 78,
    "personname": 4,
    "table": 2,
    "title": 28,
  },
  "cells": 84,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "axt-b170",
    "axt-b171",
    "axt-b172",
  ],
  "numericCells": 55,
  "table": 2,
  "text": 170,
  "total": 172,
}
`;

exports[`fixture > 2401.00418.html 1`] = `
{
  "byUnit": {
    "authorinfo": 1,
    "bibblock": 72,
    "caption": 3,
    "footnote": 2,
    "p": 140,
    "personname": 1,
    "title": 75,
  },
  "cells": 0,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "axt-b292",
    "axt-b293",
    "axt-b294",
  ],
  "numericCells": 0,
  "table": 0,
  "text": 294,
  "total": 294,
}
`;

exports[`fixture > 2401.00596.html 1`] = `
{
  "byUnit": {
    "authorinfo": 2,
    "bibblock": 88,
    "caption": 13,
    "footnote": 15,
    "p": 54,
    "personname": 1,
    "table": 1,
    "title": 16,
  },
  "cells": 49,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "axt-b188",
    "axt-b189",
    "axt-b190",
  ],
  "numericCells": 8,
  "table": 1,
  "text": 189,
  "total": 190,
}
`;

exports[`fixture > 2410.00260.html 1`] = `
{
  "byUnit": {
    "authorinfo": 3,
    "bibblock": 103,
    "caption": 17,
    "footnote": 2,
    "p": 63,
    "personname": 3,
    "table": 9,
    "title": 23,
  },
  "cells": 147,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "A3.T8.2",
    "axt-b222",
    "A3.T9.2",
  ],
  "numericCells": 77,
  "table": 9,
  "text": 214,
  "total": 223,
}
`;

exports[`fixture > 2507.00150.html 1`] = `
{
  "byUnit": {
    "ack": 1,
    "authorinfo": 12,
    "bibblock": 97,
    "caption": 9,
    "footnote": 7,
    "keywords": 1,
    "p": 53,
    "personname": 7,
    "table": 3,
    "title": 12,
  },
  "cells": 700,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "axt-b200",
    "A1.p1.1",
    "A1.p2.1",
  ],
  "numericCells": 552,
  "table": 3,
  "text": 199,
  "total": 202,
}
`;

exports[`fixture > 2608.29808.html 1`] = `
{
  "byUnit": {
    "authorinfo": 4,
    "bibblock": 137,
    "caption": 25,
    "p": 134,
    "personname": 4,
    "table": 13,
    "title": 46,
  },
  "cells": 1899,
  "firstIds": [
    "p1.3",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "axt-b361",
    "axt-b362",
    "A3.SS1.SSS0.Px2.p1.1",
  ],
  "numericCells": 1537,
  "table": 13,
  "text": 350,
  "total": 363,
}
`;

exports[`fixture > 2608.30667.html 1`] = `
{
  "byUnit": {
    "p": 1,
  },
  "cells": 0,
  "firstIds": [
    "p1.2",
  ],
  "lastIds": [
    "p1.2",
  ],
  "numericCells": 0,
  "table": 0,
  "text": 1,
  "total": 1,
}
`;

exports[`fixture > 2609.00245.html 1`] = `
{
  "byUnit": {
    "authorinfo": 1,
    "bibblock": 39,
    "footnote": 11,
    "p": 491,
    "personname": 1,
    "table": 1,
    "title": 133,
  },
  "cells": 15,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "p2.1",
    "p3.1",
    "p4.1",
  ],
  "numericCells": 0,
  "table": 1,
  "text": 676,
  "total": 677,
}
`;

exports[`fixture > 2609.00246.html 1`] = `
{
  "byUnit": {
    "authorinfo": 8,
    "bibblock": 172,
    "caption": 18,
    "footnote": 9,
    "keywords": 1,
    "p": 256,
    "personname": 4,
    "table": 8,
    "title": 71,
  },
  "cells": 1603,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "Pt0.A7.T6.13",
    "axt-b546",
    "Pt0.A7.SS6.SSSx2.p1.1",
  ],
  "numericCells": 1010,
  "table": 8,
  "text": 539,
  "total": 547,
}
`;

exports[`fixture > 2609.03768.html 1`] = `
{
  "byUnit": {
    "authorinfo": 2,
    "bibblock": 38,
    "caption": 15,
    "keywords": 1,
    "p": 85,
    "personname": 1,
    "table": 6,
    "title": 31,
  },
  "cells": 245,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "axt-b177",
    "axt-b178",
    "axt-b179",
  ],
  "numericCells": 202,
  "table": 6,
  "text": 173,
  "total": 179,
}
`;

exports[`fixture > 2609.04056.html 1`] = `
{
  "byUnit": {
    "bibblock": 89,
    "footnote": 2,
    "p": 457,
    "personname": 2,
    "title": 197,
  },
  "cells": 0,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "axt-b745",
    "axt-b746",
    "axt-b747",
  ],
  "numericCells": 0,
  "table": 0,
  "text": 747,
  "total": 747,
}
`;

exports[`fixture > synthetic-structures.html 1`] = `
{
  "byUnit": {
    "authorinfo": 1,
    "caption": 3,
    "cv": 2,
    "dedicatory": 1,
    "indexentry": 2,
    "item": 1,
    "marginal": 1,
    "p": 12,
    "title": 8,
  },
  "cells": 0,
  "firstIds": [
    "axt-b1",
    "axt-b2",
    "axt-b3",
  ],
  "lastIds": [
    "axt-b29",
    "axt-b30",
    "axt-b31",
  ],
  "numericCells": 0,
  "table": 0,
  "text": 31,
  "total": 31,
}
`;
